<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Park</string>
    
    <string name="gererate_order">生成订单</string>
    
    <string name="plate_number">车牌号</string>
    <string name="input_plate_number">车牌号</string>
    <string name="scan_plate_number">扫描车牌</string>
    
    <string name="province">省份</string>
    <string name="letter_number">字母/数字</string>
    <string name="special_plate">特殊牌照</string>
    
    <string name="call_system_keyboard">特殊牌照</string>
    <string name="charge">收费</string>
    
    <string name="clearing">车辆结算</string>
    <string name="enter_success">入场成功！</string>
    <string name="clearing_success">缴费成功！</string>
    
    <string name="clearing_success_money">
        <![CDATA[
        金额:<font color="#D13939">%1$.2f元</font>
        ]]>
    </string>
    
    <string name="clearing_time">
        <![CDATA[
        <font color="#999999">%1$s</font> <font color="#CCCCCC">至</font> <font color="#999999">%2$s</font>
        ]]> 
    </string>
    
    <string name="clearing_time_length">
        <![CDATA[
        <font color="#CCCCCC">时长:</font> <font color="#999999">%1$s</font>
        ]]> 
    </string>
    
    
    
    <string name="clearing_money">%1$.2f元</string>
    
    <string name="flee">逃单</string>
    <string name="clearing_by_cash">现金结算</string>
    <string name="clearing_on_line">在线收款</string>
    
    <string name="ok">确定</string>
    

</resources>
